--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">الصفحة الرئيسية <span class="sr-only">(current)</span></a>
+          <a class="nav-link" style="--i:1;" href="#">الصفحة الرئيسية <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">معلومات عنا</a>
+          <a class="nav-link" style="--i:2;" href="#">معلومات عنا</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle"style="--i:3;" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             صفحات
           </a>
           <div class="dropdown-menu">
@@ -41,10 +41,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">مدونة</a>
+          <a class="nav-link" style="--i:4;" href="blog.html">مدونة</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">اتصل بنا</a>
+          <a class="nav-link" style="--i:5;" href="#">اتصل بنا</a>
         </li>
 
       </ul>
@@ -205,6 +205,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+  <script src="js/scrollreveal.min.js"></script>
 
   <script src="js/index.js"></script>
 
